src/objects/Apttus_DealMgr__Deal__c.object
<CustomObject>
    <description>Represents a deal</description>
    <fields>
        <fullName>Apttus_CPQOpti__RelatedConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product configuration associated with the deal. Only valid for product configuration context</description>
        <label>Related Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account associated with the deal</description>
        <inlineHelpText>ID of the account associated with the deal</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__AppliedRuleDimensionsInfo__c</fullName>
        <label>Applied Rule Dimensions Info</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__BusinessObject__c</fullName>
        <description>THE API name of the business object associated with the deal</description>
        <inlineHelpText>THE API name of the business object associated with the deal</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Comments__c</fullName>
        <description>The comments entered by the user</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealColor__c</fullName>
        <description>The deal color</description>
        <label>Deal Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Light Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>BlackBlue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealName__c</fullName>
        <description>The deal name</description>
        <label>Deal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealScore__c</fullName>
        <description>The deal percentile score</description>
        <inlineHelpText>The deal percentile score</inlineHelpText>
        <label>Deal Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Description__c</fullName>
        <description>The description for the deal</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__MeasureType__c</fullName>
        <defaultValue>&quot;LowHigh&quot;</defaultValue>
        <description>Stores the Measure Type {LowHigh, HighLow} of the applicable Deal Rule...</description>
        <label>Measure Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__RelatedOpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the opportunity associated with the deal. Only valid for opportunity context</description>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who requested the deal</description>
        <inlineHelpText>The user who requested the deal</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deal</label>
    <nameField>
        <displayFormat>DL-{00000000}</displayFormat>
        <label>Deal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>